--- a/package.json
+++ b/package.json
@@ -6,22 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "@headlessui/react": "^1.7.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.11.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.363.0",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
+    "prisma": "^5.11.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
