--- a/.env
+++ b/.env
@@ -1,7 +1,18 @@
-DATABASE_URL="mongodb+srv://devsethi:sethi4522@cluster0.t87iet1.mongodb.net/data"
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=nextjs14
+DATABASE_URL="mongodb+srv://devsethi:sethi4522@cluster0.d60b9al.mongodb.net/data"
 
-GOOGLE_CLIENT_ID=537654748934-m3i7qupolv6hn0709116u6api1idpcn8.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_SECRET='nextjs14'
+NEXTAUTH_URL="http://localhost:3000"
+
+GITHUB_ID=1580a45f4b445988b81c
+GITHUB_SECRET=26941cf24e4ec4b8a347080bbe256ffe25e2a0b0
+
+GOOGLE_CLIENT_ID=245620745013-kljcqvvbg4ffh046sk32sbo7r3dh9c1f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dc1git8vt
+
+NEXT_PUBLIC_PUSHER_APP_KEY=a21f0ad04926c893216d
+PUSHER_APP_ID=1777713
+PUSHER_SECRET=43f144d3648f79a26116
+
