--- a/package.json
+++ b/package.json
@@ -6,28 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.0",
-    "@headlessui/react": "^1.7.18",
+    "@auth/prisma-adapter": "^1.5.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.363.0",
+    "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "nextjs-toploader": "^1.6.11",
-    "prisma": "^5.11.0",
+    "next-cloudinary": "^6.3.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
@@ -37,8 +32,7 @@
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -49,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
