--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.2",
+    "@gsap/react": "^2.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
